# AegisCore

./: .gitignore  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  TASKFLOW.md  aegis.toml  install.sh
.aegis/designs/hld/: aegis.md  agent-design.md  attach.md  continuous-taskflow.md  web-task-editing.md
.aegis/designs/lld/: M35-tmux.md  M36-termination-and-handoff.md  M37-robust-orchestration.md  attach-persistence.md  attach-tui.md  attach-web.md  backlog.md  channels.md  cli.md  config.md  continuous-bastion-loop.md  controller.md  core.md  daemon.md  human-clarification-ui.md  human-clarification.md  messaging.md  milestone-dependency-ordering.md  milestone-worktree-lifecycle.md  mui-integration.md  pane-persistence.md  prompts.md  provider-model-override.md  provider-nudging.md  providers.md  pwa-integration.md  recorder.md  sandbox.md  state.md  taskflow-notify-bastion-registry.md  taskflow.md  telegram.md  tmux.md  tui-session-recording.md  ui.md  watchdog.md  web-agents.md  web-ui-taskflow-enhancements.md
.aegis/designs/roadmap/: backlog.toml  index.toml  roadmap.md
.aegis/designs/roadmap/milestones/: M11.toml  M12.toml  M13.toml  M14.toml  M15.toml  M17.toml  M18.toml  M19.toml  M20.toml  M21.toml  M22.toml  M23.toml  M24.toml  M25.toml  M26.toml  M27.toml  M28.toml  M29.toml  M30.toml  M31.toml  M32.toml  M33.toml  M34.toml  M35.toml  M36.toml  M37.toml  (+5 more)
.aegis/prompts/handoff/: resume.md
.aegis/prompts/system/: default.md
.github/workflows/: ci.yml  release.yml
crates/aegis-channels/: Cargo.toml
crates/aegis-channels/src/: broadcast.rs  error.rs  injection.rs  lib.rs  mailbox.rs  observation.rs  registry.rs
crates/aegis-channels/tests/: mailbox_integration.rs  registry_integration.rs
crates/aegis-controller/: Cargo.toml
crates/aegis-controller/src/: clarification.rs  commands.rs  dispatcher.rs  events.rs  git.rs  lib.rs  lifecycle.rs  messaging.rs  prompts.rs  scheduler.rs  storage.rs  transcript.rs  watchdog.rs
crates/aegis-controller/src/daemon/: http.rs  logs.rs  mod.rs  projects.rs  server.rs  uds.rs
crates/aegis-controller/src/prompts/templates/: recovery_default.md  system_default.md
crates/aegis-controller/src/registry/: agents.rs  channels.rs  mod.rs  tasks.rs
crates/aegis-controller/src/runtime/: mod.rs
crates/aegis-controller/src/state/: mod.rs
crates/aegis-controller/tests/: registry_integration.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: agent.rs  channel.rs  config.rs  error.rs  lib.rs  lock.rs  provider.rs  recorder.rs  sandbox.rs  storage.rs  task.rs  watchdog.rs
crates/aegis-design/: Cargo.toml
crates/aegis-design/src/: context.rs  engine.rs  error.rs  lib.rs  registry.rs  template.rs  tests.rs
crates/aegis-design/src/builtin/taskflow-bastion/: startup.md  system_prompt.md  template.toml
crates/aegis-design/src/builtin/taskflow-designer/: startup.md  system_prompt.md  template.toml
crates/aegis-design/src/builtin/taskflow-implementer/: startup.md  system_prompt.md  template.toml
crates/aegis-design/src/builtin/taskflow-splinter/: startup.md  system_prompt.md  template.toml
crates/aegis-providers/: Cargo.toml
crates/aegis-providers/src/: builtin_providers.yaml  claude.rs  codex.rs  gemini.rs  generic.rs  handoff.rs  lib.rs  manifest.rs  ollama.rs  registry.rs
crates/aegis-recorder/: Cargo.toml
crates/aegis-recorder/src/: lib.rs  query.rs  recorder.rs  rotation.rs
crates/aegis-recorder/tests/: flight_recorder.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/src/: error.rs  lib.rs  profile.rs  template.rs
crates/aegis-sandbox/templates/: agent_jail.sb
crates/aegis-sandbox/tests/: sandbox_profile.rs
crates/aegis-taskflow/: Cargo.toml
crates/aegis-taskflow/src/: lib.rs  model.rs  state.rs  sync.rs  view.rs
crates/aegis-taskflow/src/parser/: index.rs  milestone.rs  mod.rs
crates/aegis-telegram/: Cargo.toml
crates/aegis-telegram/src/: lib.rs
crates/aegis-tmux/: Cargo.toml
crates/aegis-tmux/src/: client.rs  error.rs  escape.rs  lib.rs  target.rs
crates/aegis-tmux/tests/: tmux_integration.rs
crates/aegis-tui/: Cargo.toml
crates/aegis-tui/src/: app.rs  client.rs  handler.rs  lib.rs  terminal.rs  ui.rs
crates/aegis-watchdog/: Cargo.toml
crates/aegis-watchdog/src/: backoff.rs  failover.rs  lib.rs  matcher.rs  monitor.rs  nudge.rs
crates/aegis-web/: Cargo.toml  build.rs
crates/aegis-web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/aegis-web/frontend/src/: main.tsx  styles.css  theme.ts
crates/aegis-web/frontend/src/api/: rest.test.ts  rest.ts  thunks.ts
crates/aegis-web/frontend/src/components/: AgentTargetPicker.tsx  App.test.tsx  App.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBadge.tsx  Terminal.test.tsx  Terminal.tsx
crates/aegis-web/frontend/src/lib/: agentRoutes.ts  projectNavigation.test.ts  projectNavigation.ts  useProjectViewState.test.tsx  useProjectViewState.ts
crates/aegis-web/frontend/src/store/: agentsSlice.test.ts  agentsSlice.ts  channelsSlice.ts  domain.ts  index.ts  projectsSlice.ts  tasksSlice.ts  uiSlice.test.ts  uiSlice.ts  wsMiddleware.test.ts  wsMiddleware.ts
crates/aegis-web/frontend/src/types/: AegisEvent.ts  Agent.ts  AgentKind.ts  AgentStatus.ts  ChannelKind.ts  ChannelRecord.ts  DetectedEvent.ts  Task.ts  TaskCreator.ts  TaskStatus.ts  WatchdogAction.ts
crates/aegis-web/frontend/src/views/: AgentsView.test.tsx  AgentsView.tsx  ChannelsView.tsx  ClarificationsView.test.tsx  ClarificationsView.tsx  DesignsView.test.tsx  DesignsView.tsx  LogView.test.tsx  LogView.tsx  PaneView.test.tsx  PaneView.tsx  TaskflowView.test.tsx  TaskflowView.tsx  TasksView.tsx
crates/aegis-web/src/: lib.rs  routes.rs
docs/: design-templates.md  getting-started.md  taskflow.md  tui.md
src/: anchoring.rs  client.rs  daemon.rs  error.rs  main.rs  output.rs
src/commands/: agents.rs  channels.rs  clarify.rs  completions.rs  config.rs  daemon.rs  design.rs  doctor.rs  init.rs  messages.rs  mod.rs  observe.rs  session.rs  taskflow.rs  ui.rs  worktree.rs
