[package]
name = "aegis-channels"
version = "0.1.0"
edition = "2021"
description = "Injection, Mailbox, and Broadcast channels for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
aegis-tmux = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
async-trait = { workspace = true }
tracing    = { workspace = true }
fs2        = "0.4"
tempfile   = "3"

[dev-dependencies]
tempfile = "3"
