[package]
name = "aegis-controller"
version = "0.1.0"
edition = "2021"
description = "State management and orchestration for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
fs2        = "0.4"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tokio      = { version = "1", features = ["fs", "time", "rt", "rt-multi-thread"] }
async-trait = "0.1"
tempfile = "3" # for atomic writes
