[package]
name = "aegis-providers"
version = "0.1.0"
edition = "2021"
description = "CLI provider implementations for AegisCore"
license = "MIT"

[features]
default = ["claude", "gemini"]
claude  = []
gemini  = []

[dependencies]
aegis-core = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_yaml = { workspace = true }
