[package]
name = "aegis-recorder"
version = "0.1.0"
edition = "2021"
description = "Flight Recorder for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
aegis-tmux = { workspace = true }
chrono     = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tempfile = "3"
