[package]
name = "aegis-taskflow"
version = "0.1.0"
edition = "2021"
description = "HLD → LLD → Roadmap → Task pipeline engine for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = "0.8"
fs2        = "0.4"
tempfile   = "3"
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
pulldown-cmark = "0.13"
regex      = "1"
