[package]
name = "aegis-tmux"
version = "0.1.0"
edition = "2021"
description = "tmux abstraction layer for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
tempfile   = "3"
uuid       = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
