[package]
name = "aegis-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for AegisCore"
license = "MIT"

[dependencies]
aegis-core = { workspace = true }
tokio      = { workspace = true, features = ["net", "rt", "sync", "time"] }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { version = "1", features = ["v4", "serde"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec"] }
base64 = "0.22"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
tui-term = "0.1.1" # for the interactive terminal pane
